newstyle.css
/* CUSTOM STYLE VARIABLES */


/* Mobile first */
:root {
    --display-font: 'DM Serif Display', serif;
    --text-font: 'DM Sans', sans-serif;
    font-size: 62.5%;
    --heading-font-size: 3rem;
    --body-font-size: 1.6rem;
    --small-text-size: 1.4rem;
    --input-font-size: 1.6rem;
    --subheading-font-size: 2.1rem;

    --sj-white: #FBFBFB;
    --sj-black: #2d2d2d;
    --sj-peach: #f3d0a3;
    --sj-pink: #eacac0;
    --sj-red: #ED6A5A;
    --sj-blue: #2776EA;
}

/* Adjusted custom variables for desktop */
@media (min-width: 600px) {
    :root {
        --body-font-size: 1.8rem;
        --small-text-size: 1.4rem;
        --input-font-size: 1.6rem;
        --heading-font-size: 3.5rem;
        --subheading-font-size: 3rem;
    }
}

html {
    overflow-y: scroll;
}

/* H TAGS */

h1 {
    color: var(--sj-black);
    font-size: var(--heading-font-size);
    font-family: var(--display-font);
    margin: 0;
    padding-left: 20px;
}

@keyframes underline {
    from {width: 0;}
    to {width: 100%;}
  }

h2 {
    display: inline-block;
    color: var(--sj-black);
    font-family: var(--display-font);
    margin: 40px auto 20px;
}

.underline {
    margin-top:-5px;
    height: 2px;
    animation: underline 1s;
    width: 100%;
    background-color: var(--sj-blue);
}



h3 {
    font-size: var(--body-font-size);
}

/* LAYOUT (BODY/MAIN/FOOTER) */


.intro-container {
    display: flex;
    flex-direction: column;
    align-items: center;
    row-gap: 20px;
}

img {
    width: 90%;
    margin: 0 20px 20px 0;
    max-height: 250px;
    max-width: 250px;
    box-shadow: 10px 10px var(--sj-black);
}


.intro-para {
    font-family: var(--display-font);
    font-size: var(--subheading-font-size);
    color: var(--sj-black);
    margin: 0;
}

body {
    font-family: var(--text-font);
    font-size: var(--body-font-size);
    display: flex;
    flex-direction: column;
    min-height: 100vh;
    margin: 0;
    background-color: var(--sj-white);
}

body main {
    max-width: 800px;
    margin: 0 auto;
    padding: 20px;
    box-sizing: border-box;
    color: var(--sj-black);
}

body footer {
    color: var(--sj-white);
    font-family: var(--body-font-size);
    font-size: var(--small-text-size);
    display: flex;
    justify-content: center;
    padding: var(--small-text-size);
}

/* NAVBAR COMPONENT */


/* Mobile NavBar */

.mobile-main-nav {
    position: relative;
    top: -400%;
    transition: 0.5s;
}

body header {
    display: flex;
    flex-direction: column;
    background-color: transparent;
    padding: 0px;
    height: 60px;
    z-index: 1;
    border-bottom: 1px solid var(--sj-black);
}

.h1-wrapper {
    width: 100%;
    max-width: 800px;
    margin: 0 auto;
    background-color: var(--sj-white);
    display: flex;
    justify-content: space-between;
    align-items: center;
    box-sizing: border-box;
    z-index: 2;
}

.nav-link {
    display: none;
    font-family: var(--text-font);
    font-size: var(--body-font-size);
    width: 100%;
    padding: 2rem;
    text-align: center;
    margin: 0;
    color: var(--sj-white);
    background-color: var(--sj-black);
    text-decoration: none;
    box-sizing: border-box;
}

.nav-link:hover {
    text-decoration: underline;
}

.selected {
    text-decoration: underline;
}

.button {
    text-decoration: none;
    color: white;
    font-family: var(--display-font);
    font-size: var(--body-font-size);
    padding: 1rem;
    border-radius: 30px;
    display: none;
    text-align: center;
    min-width: 80px;
    background-color: black;
}

/* Desktop NavBar */


.main-nav {
    display: none;
}

@media (min-width: 600px) {

    body header {
        height: 80px;
    }

    .intro-container {
        display: flex;
        align-items: start;
        justify-content: space-between;
        flex-direction: row;
        row-gap: 20px;
        margin-bottom: 40px;
    }

    .intro-para {
        display: inline;
        margin-left: 20px;
    }


    .mobile-main-nav {
        display: none;
    }

    .desktop-nav-link {
        margin: 0 10px;
        font-family: var(--text-font);
        font-size: var(--body-font-size);
        text-decoration: none;
        color: var(--sj-black);
    }

    .desktop-nav-link:hover {
        text-decoration: underline;
    }

    .main-nav {
        display: flex;
        flex-direction: row;
        align-items: center;
    }

    a:nth-of-type(3) {
        margin: 0;
        margin-right: 20px;
    }

    .selected {
        text-decoration: underline;
    }

    body header {
        display: flex;
        flex-direction: row;
        background-color: var(--sj-white);
    }


    body main {
        max-width: 800px;
        margin: 20px auto auto auto;
    }


    .button {
        margin: 10px;
        display: block;
    }
}

/* HAMBURGER MENU COMPONENT */

.model-2 {
    height: 60px;
    width: 60px;
    min-height: 60px;
    min-width: 60px;
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    background-color: var(--sj-black);
}


@media (min-width: 600px) {
    .model-2 {
        display: none;
    }
}


.mobile-menu-toggle {
    display: flex;
    flex-direction: column;
    justify-content: space-between;
}

.bar {
    height: 3px;
    width: 100%;
    display: block;
    position: relative;
    background-color: var(--sj-white);
    -moz-transition: 0.4s;
    -o-transition: 0.4s;
    -webkit-transition: 0.4s;
    transition: 0.4s;
}

.bar:nth-of-type(1) {
    margin-top: 0;
}

.bar:nth-of-type(3) {
    margin-bottom: 0;
}

label {
    display: flex;
    flex-direction: column;
    justify-content: space-between;
    height: 30px;
    width: 30px;
    -moz-border-radius: 100%;
    -webkit-border-radius: 100%;
    border-radius: 100%;
    -moz-transition: 0.3s;
    -o-transition: 0.3s;
    -webkit-transition: 0.3s;
    transition: 0.3s;
    cursor: pointer;
}


#mobile-menu-toggle:checked~.bar:nth-of-type(1) {
    -moz-transform: translateY(450%) rotate(45deg);
    -ms-transform: translateY(450%) rotate(45deg);
    -webkit-transform: translateY(450%) rotate(45deg);
    transform: translateY(450%) rotate(45deg);
}

#mobile-menu-toggle:checked~.bar:nth-of-type(2) {
    opacity: 0;
}

#mobile-menu-toggle:checked~.bar:nth-of-type(3) {
    -moz-transform: translateY(-450%) rotate(-45deg);
    -ms-transform: translateY(-450%) rotate(-45deg);
    -webkit-transform: translateY(-450%) rotate(-45deg);
    transform: translateY(-450%) rotate(-45deg);
}

#mobile-menu-toggle:checked~.bar:nth-of-type(1) {
    -moz-animation: rotateR 1.5s cubic-bezier(0.5, 0.2, 0.2, 1);
    -webkit-animation: rotateR 1.5s cubic-bezier(0.5, 0.2, 0.2, 1);
    animation: rotateR 1.5s cubic-bezier(0.5, 0.2, 0.2, 1);
}

#mobile-menu-toggle:checked~.bar:nth-of-type(2) {
    -moz-animation: fade 1.5s cubic-bezier(0.1, 0.8, 0.1, 1);
    -webkit-animation: fade 1.5s cubic-bezier(0.1, 0.8, 0.1, 1);
    animation: fade 1.5s cubic-bezier(0.1, 0.8, 0.1, 1);
}

#mobile-menu-toggle:checked~.bar:nth-of-type(3) {
    -moz-animation: rotateL 1.5s cubic-bezier(0.5, 0.2, 0.2, 1);
    -webkit-animation: rotateL 1.5s cubic-bezier(0.5, 0.2, 0.2, 1);
    animation: rotateL 1.5s cubic-bezier(0.5, 0.2, 0.2, 1);
}

/* _______________ */

/* Summar / Details */

.skills {
    margin: 16px 0;
}

details h3 {
    margin: 0;
    margin-right: 40px;
    display: inline-block;
}

details p {
    margin: 0;
    padding: 20px;
    border: 2px solid var(--sj-black);
    border-top: none;
}

details summary {
    cursor: pointer;
    position: relative;
    padding: 20px;
    background-color: var(--sj-black);
    color: var(--sj-white);
    list-style: none;
    background-repeat: no-repeat;
}


details summary::before {
    transition: 1s transform ease;
    content: "";
    position: absolute;
    width: 25px;
    height: 25px;
    background-image: url('./assetts/lightmodeexpand.svg');
    background-repeat: no-repeat;
    background-size: cover;
    transform: rotate(0deg);
    right: 20px;
}

details[open] summary::before {
    transform: rotate(45deg);
}

/* hide marker on safari */
details summary::-webkit-details-marker {
    display:none;
  }

details:hover summary h3 {
    text-decoration: underline;
}

details[open] p {
    color: var(--sj-white);
    background-color: var(--sj-blue);
}

